--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,14 +25,10 @@ jobs:
           node-version: '16'
 
       - name: Install dependencies
-        run: |
-          cd frontend
-          npm install
+        run: npm install
 
       - name: Build React app
-        run: |
-          cd frontend
-          npm run build
+        run: npm run build
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
@@ -40,7 +36,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./frontend/build
+          path: ./build
 
       - name: Deploy to GitHub Pages
         id: deployment
