--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "dependencies": {
     "axios": "^0.21.1",
+    "gh-pages": "^3.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.1.0",
     "react-router-dom": "^5.1.0",
     "react-scripts": "^4.0.3",
-    "gh-pages": "^3.2.3"
+    "web-vitals": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
