--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.0.0",
+    "@emotion/styled": "^11.0.0",
+    "@mui/material": "^5.0.0",
     "axios": "^0.21.1",
-    "gh-pages": "^3.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.1.0",
     "react-router-dom": "^5.1.0",
     "react-scripts": "^4.0.3",
-    "web-vitals": "^5.1.0"
+    "gh-pages": "^3.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
