--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 fastapi==0.95.2
 uvicorn[standard]==0.21.1
-motor==3.1.1
+motor==2.5.1
 pydantic==1.10.5
 gunicorn==20.1.0
 python-dotenv==0.21.1
+pymongo==3.12
