--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 fastapi==0.95.2
 uvicorn[standard]==0.21.1
-motor==2.5.1
+pymongo==4.3.3
+motor==3.3.2
 pydantic==1.10.5
-gunicorn==20.1.0
-python-dotenv==0.21.1
-pymongo[srv]==3.6
+python-multipart==0.0.5
 dnspython==2.3.0
